Favicon Replaced, Portfolio Images dont Squish, Modal Link Correction

--- a/styles/main.css
+++ b/styles/main.css
@@ -4758,6 +4758,18 @@ Created using IcoMoon - icomoon.io
   text-decoration: none;
 }
 
+.footer-title {
+  color: inherit;
+  padding: 0.5rem;
+  font-size: 0.8571em;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.footer-title a:hover {
+  text-decoration: none;
+}
+
 .footer ul li a:hover {
   text-decoration: none;
 }
@@ -6890,7 +6902,7 @@ Created using IcoMoon - icomoon.io
   position: relative;
   display: block;
   max-width: 100%;
-  height: 300px;
+  height: 100%;
   opacity: 1;
 }
 
@@ -6953,7 +6965,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .gallery figure.cc-effect .h4 {
-  margin-top: 25%;
+  margin-top: 15%;
   -webkit-transition: -webkit-transform 0.35s;
   transition: -webkit-transform 0.35s;
   transition: transform 0.35s;
